# ssauce

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
modules/committee/: Cargo.toml  README.md
modules/committee/src/: lib.rs
modules/haggle/: Cargo.toml  README.md
modules/poll/: Cargo.toml  README.md
modules/poll/src/: lib.rs
modules/scheduler/: Cargo.toml  README.md
modules/scheduler/src/: lib.rs  task.rs
modules/signal/: Cargo.toml  README.md
modules/tax/: Cargo.toml  README.md
modules/tax/src/: lib.rs
modules/traits/: Cargo.toml  README.md
modules/traits/src/: collateral.rs  dscurrency.rs  lib.rs  signal.rs
modules/vote/: Cargo.toml  README.md
modules/vote/src/: lib.rs
runtimes/genesis/: Cargo.toml
runtimes/genesis/src/: lib.rs
runtimes/main/: Cargo.toml  build.rs
runtimes/main/src/: lib.rs
