[package]
name = "vote"
version = "0.0.1"
authors = ["4meta5"]
edition = "2018"

[dependencies]
serde = { version = "1.0.103", optional = true }
safe-mix = { version = "1.0.0", default-features = false }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
primitives = { package = "sp-core", git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
support = { package = "frame-support", git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
system = { package = "frame-system", git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }

[dev-dependencies]
hex-literal = "0.2.1"

[features]
default = ["std"]
std = [
	"safe-mix/std",
	"codec/std",
	"primitives/std",
	"sp-std/std",
	"serde",
	"sp-io/std",
	"support/std",
	"sp-runtime/std",
	"system/std",
]
