[package]
name = "main"
version = "2.0.0"
authors = ["4meta5"]
edition = "2018"

[dependencies]
safe-mix = { version = "1.0", default-features = false }
serde = { version = "1.0.104", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
version = {package = "sp-version", git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
support = { package = "frame-support", git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
system = { package = "frame-system", git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
session = { package = "pallet-session", git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
executive = { package = "frame-executive", git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
indices = { package = "pallet-indices", git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
balances = { package = "pallet-balances", git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
transaction-payment = { package = "pallet-transaction-payment", git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
timestamp = { package = "pallet-timestamp", git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
babe = { package = "pallet-babe", git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
grandpa = { package = "pallet-grandpa", git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
sudo = { package = "pallet-sudo", git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
randomness-collective-flip = {package = "pallet-randomness-collective-flip", git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
task-scheduler = { package = "scheduler", path = "../../modules/scheduler", default-features = false }
transfer-tax = { package = "tax", path = "../../modules/tax", default-features = false }
vote = { package = "vote", path = "../../modules/vote", default-features = false }

# [dependencies.tx-pool-api]
# [dependencies.inherents]
# [dependencies.offchain-primitives]

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.4" }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-api/std",
	"sp-std/std",
	"sp-io/std",
	"support/std",
	"balances/std",
	"babe/std",
	"babe-primitives/std",
	"executive/std",
	"indices/std",
	"grandpa/std",
	"sp-core/std",
	"randomness-collective-flip/std",
	"sp-runtime/std",
	"system/std",
	"timestamp/std",
	"sudo/std",
	"version/std",
	"serde",
	"safe-mix/std",
	"session/std",
    "transfer-tax/std",
	"task-scheduler/std",
	"transaction-payment/std",
]
# "offchain-primitives/std", "block-builder-api/std","tx-pool-api/std", "inherents/std",
